updated more of the styles further fixing layout issues.

--- a/style.css
+++ b/style.css
@@ -202,6 +202,9 @@ h2 {
 .nav-bar {
 	display: grid;
 	grid-template-columns: 0.2fr 1fr;
+	text-decoration: none;
+	color: white;
+	align-items: center;
 }
 
 .nav-bar > .icon {
